--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"name": "kuku",
 	"short_name": "Kuku",
-	"version": "0.8.40125a",
+	"version": "0.8.40125b",
 	"author": "saikoro.org",
 	"background_color": "#fff",
 	"theme_color": "#fff",
