--- a/app.json
+++ b/app.json
@@ -1,19 +1,19 @@
 {
 	"name": "kuku",
 	"short_name": "Kuku",
-	"version": "0.8.40204a",
+	"version": "0.9.40208a",
 	"author": "saikoro.org",
 	"background_color": "#fff",
 	"theme_color": "#fff",
 	"icons": [{
-		"src": "./icon.svg",
-		"sizes": "300x300",
-		"type": "image/svg",
-		"purpose": "maskable"
-	},{
 		"src": "./icon.png",
 		"sizes": "192x192",
-		"type": "image/png"
+		"type": "image/png",
+		"purpose": "maskable"
+	},{
+		"src": "./icon.svg",
+		"sizes": "300x300",
+		"type": "image/svg"
 	}],
 	"display": "standalone",
 	"start_url": "./?v=1",
