--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-	"name": "kuku",
+	"name": "Kuku",
 	"short_name": "Kuku",
-	"version": "0.9.40214a",
-	"author": "saikoro.org",
+	"version": "0.9.40215a",
+	"author": "saikoro.org/kuku",
 	"background_color": "#fff",
 	"theme_color": "#fff",
 	"icons": [{
